Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
12.2(EOL)
-
None
-
Not for Release Notes
-
Q1/2026 Server Maintenance
Description
Remove unused debugging preprocessor directives and associated dead code from the FTS module.
These debug directives were never effectively used for debugging purposes and represent
dead code that should be cleaned up.
DEBUG_FTS_SORT_PRINT - Used for FTS sorting debug output
FTS_DEBUG_PRINT - General FTS debugging output
FTS_INTERNAL_DIAG_PRINT - Internal FTS diagnostic printing
FTS_OPTIMIZE_DEBUG - FTS optimization debugging functions
The above debugging preprocessor directives that are either:
- Never defined/enabled in the build system
- Contain code that is never executed
- Create maintenance overhead without providing value
Attachments
Issue Links
- relates to
-
MDEV-28730 Remove internal parser usage from InnoDB fts
-
- Closed
-