storage/innobase/include/univ.i
@@ -151,8 +151,6 @@ using the call command. */
 #define UNIV_STATS_DEBUG			/* prints various stats
 						related debug info from
 						dict0stats.c */
-#define FTS_INTERNAL_DIAG_PRINT                 /* FTS internal debugging
-                                                info output */
 #endif
 
 // #define UNIV_SQL_DEBUG
